--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,5 +17,5 @@ jobs:
     
         - name: Run Final Steps
           run: |
-            pytest --cov=python/ --cov-fail-under=60
+            pytest --cov=ghactions python/ --cov-fail-under=60
 
