--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,9 +13,9 @@ jobs:
         - name: Install Dependencies
           run: |
             python -m pip install --upgrade pip
-            pip install pytest pytest-cov pylint flake8 mypy bandit
+            pip install pytest pytest-cov
     
         - name: Run Final Steps
           run: |
-            pytest --cov=ghactions python/ --cov-fail-under=60
+            pytest --cov=ghactions --cov-fail-under=60
 
