--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,6 +17,6 @@ jobs:
     
         - name: Run Final Steps
           run: |
-            pytest --cov=./ghactions --cov-fail-under=60
+            pytest --cov=python --cov-fail-under=60
 
 
