--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,9 @@ jobs:
       runs-on: ubuntu-latest
       steps:
 
+        - name: checkout code
+          uses: actions/checkout@v3
+          
         - name: Install Dependencies
           run: |
             python -m pip install --upgrade pip
