--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
       steps:
 
         - name: checkout code
-          uses: actions/checkout@v3
+          run: git clone https://github.com/DenzMoses/ghactions.git 
           
         - name: Install Dependencies
           run: |
