--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,6 @@ jobs:
     
         - name: Run Final Steps
           run: |
-            pytest --cov=ghactions python --cov-fail-under=60
+            pytest --cov= python/ --cov-fail-under=60
 
 
