--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -14,4 +14,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest pytest-cov
+
+      - name: Run Final Steps
+        run: |
+          pytest --cov= ./ghactions/python/ --cov-fail-under=60
