--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest
 
       - name: Run Final Steps
-        run: echo "${{ env.COVERAGE }}%"
+        run: echo "${{ dev.COVERAGE }}%"
