--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -17,4 +17,4 @@ jobs:
           pip install pytest
 
       - name: Run Final Steps
-        run: echo "${{ dev.COVERAGE }}%"
+        run: echo "${{ env.COVERAGE }}"
