--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install pytest pytest-cov
 
       - name: Run Final Steps
-        run: echo "Coverage is ${{ vars.coveragepercentage }}"
+        run: pytest --cov=. --cov-fail-under=" ${{ vars.coveragepercentage }}"
