--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -18,5 +18,5 @@ jobs:
           pip install pytest pytest-cov
 
       - name: Run Final Steps
-        run: pytest --cov=. --cov-fail-under=" ${{ vars.coverage }}"
+        run: pytest --cov=. --cov-fail-under=" ${{ vars.coverageper }}"
         
