--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -15,10 +15,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
-
-      - name: Run Final Steps
-        run: pytest --cov=. --cov-fail-under=" ${{ vars.coverageper }}"
+          pip install pytest
 
       - name: printing
         run: | 
