--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: printing
         run: | 
-          echo "dev success"
+          echo "Branch name: ${{ github.ref }}"
           if [ "${{ github.ref_name }}" == 'refs/heads/main' ]; then
             echo "This is a pull request event"
           else
