--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -11,7 +11,9 @@ jobs:
     environment: dev
     
     steps:
-    
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -19,7 +21,6 @@ jobs:
 
       - name: Notify Slack on Success
         if: success()
-        uses: ./https://github.com/DenzMoses/action-slack-notify.git
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_TITLE: 'Deployment Successful'
