--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -12,7 +12,7 @@ jobs:
     
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: ./https://github.com/DenzMoses/checkout.git
         
       - name: Install Dependencies
         run: |
