--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install pip
         run: |
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade pipdd
 
       - name: Notify Slack on Success
         if: success()
@@ -29,3 +29,13 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_TITLE: 'Deployment Successful'
           SLACK_COLOR: '#36a64f'
+
+      - name: Notify Slack on Failure
+        if: success()
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: 'https://hooks.slack.com/services/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'
+          SLACK_TITLE: 'Deployment Successful'
+          SLACK_COLOR: '#36a64f'
+
+      
