--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -34,7 +34,7 @@ jobs:
         if: failure()
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK: 'https://hooks.slack.com/services/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'
+          SLACK_WEBHOOK: ${{ secrets.SLACK_FAILURE }}
           SLACK_TITLE: 'Deployment Successful'
           SLACK_COLOR: '#36a64f'
 
