--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -20,7 +20,10 @@ jobs:
 
       - name: Install pip
         run: |
-          python -m pip install --upgrade pipdd
+          python -m pip install --upgrade pip
+
+      - name: event name
+        run: ${{ github.event_name }}
 
       - name: Notify Slack on Success
         if: success()
