--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -42,23 +42,25 @@ jobs:
                 "channel": "devops-failure"
               }
             }   
+
       - name: Notify slack on success
         if: ${{ success() }}
         uses: rtCamp/action-slack-notify@v2
         with:
-          status: '${{ github.event_name }} Deployment is successful'
           slack-webhook: ${{ steps.environment.outputs.slack_webhook }}
           channel: ${{ steps.environment.outputs.channel }}
-          color: "#228B22"  
+          color: "#228B22" # or a specific color like 'good' or '#ff00ff'
+          icon: https://github.com/rtCamp.png?size=48
+          message: 'Post Content :rocket:'
+          title: Post Title
 
       - name: Notify slack on failure
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         with:
-          status: ${{ github.event_name }} Deployment Failure
           slack-webhook: ${{ steps.environment.outputs.slack_webhook }}
           channel: ${{ steps.environment.outputs.channel }}
-          color: "#E01E5A" 
-
-
-      
+          color: "#E01E5A" # or a specific color like 'danger' or '#ff0000'
+          icon: https://github.com/rtCamp.png?size=48
+          message: 'Post Content :rocket:'
+          title: Post Title
