--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -45,7 +45,7 @@ jobs:
         if: ${{ success() }}
         uses: rtCamp/action-slack-notify@v2
         with:
-          slack-webhook: "https://hooks.slack.com/services/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"
+          slack-webhook: ${{ secrets.SLACK_WEBHOOK }}
           channel: ${{ steps.environment.outputs.channel }}
           color: "#228B22" # or a specific color like 'good' or '#ff00ff'
           icon: https://github.com/rtCamp.png?size=48
@@ -56,7 +56,7 @@ jobs:
         if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         with:
-          slack-webhook: "https://hooks.slack.com/services/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"
+          slack-webhook: ${{ secrets.SLACK_WEBHOOK_FAILURE }}
           channel: ${{ steps.environment.outputs.channel }}
           color: "#E01E5A" # or a specific color like 'danger' or '#ff0000'
           icon: https://github.com/rtCamp.png?size=48
