--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -31,6 +31,7 @@ jobs:
           map: |
             {
               "dev": {
+                "slack_webhook": "https://hooks.slack.com/services/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"
                 "channel": "devops"
               },
               "stage": {
@@ -49,7 +50,7 @@ jobs:
           SLACK_CHANNEL: ${{ steps.environment.outputs.channel }}
           SLACK_COLOR: "#228B22"  
           SLACK_MESSAGE: "${{ github.job }} is successful"
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_WEBHOOK: ${{ steps.environment.outputs.slack_webhook }}
 
       - name: Notify slack on Failure
         if: ${{ failure() }}
