--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -41,7 +41,9 @@ jobs:
                 "channel": "devops-failure"
               }
             }
-
+            
+      - name: Check environment mapping
+        run: echo "Environment mapping: ${{ steps.environment.outputs }}"
 
       - name: Notify slack on success
         if: ${{ success() }}
