--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -21,11 +21,11 @@ jobs:
           map: |
             {
               "main": {
-                "slack_webhook": "${{ https://hooks.slack.com/services/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 }}",
+                "slack_webhook": "https://hooks.slack.com/services/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",
                 "channel": "devops"
               },
               "stage": {
-                "slack_webhook": "${{ https://hooks.slack.com/services/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 }}",
+                "slack_webhook": "https://hooks.slack.com/services/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",
                 "channel": "devops-primary"
               }
             }
