--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -35,10 +35,11 @@ jobs:
         if: ${{ success() }}
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_CHANNEL: ${{ steps.environment.outputs[steps.environment.outputs.environment].channel }}
+          SLACK_CHANNEL: "${{ steps.environment.outputs[steps.environment.outputs.environment].channel }}"
           SLACK_COLOR: "#228B22"  
           SLACK_MESSAGE: "${{ github.job }} is successful"
-          SLACK_WEBHOOK: ${{ steps.environment.outputs[steps.environment.outputs.environment].slack_webhook }}
+          SLACK_WEBHOOK: "${{ steps.environment.outputs[steps.environment.outputs.environment].slack_webhook }}"
+        
 
 
       - name: Notify slack on Failure
