--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -17,9 +17,9 @@ jobs:
         - name: Repository Dispatch
           uses: peter-evans/repository-dispatch@v3
           with:
-            token: ${{ GITHUB_TOKEN }}
             repository: DenzMoses/wf-dispatch
             event-type: my-event
+            token: ${{ github.token }}
       # - name: Checkout repository
       #   uses: actions/checkout@v3
 
