--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -21,12 +21,12 @@ jobs:
             event-type: my-event
             token: ${{ secrets.PAT1 }}
 
-        - name: Repository Dispatch
-          uses: peter-evans/repository-dispatch@v3
-          with:
-            repository: DenzMoses/wf-repo2
-            event-type: my-event
-            token: ${{ secrets.PAT1 }}
+        # - name: Repository Dispatch
+        #   uses: peter-evans/repository-dispatch@v3
+        #   with:
+        #     repository: DenzMoses/wf-repo2
+        #     event-type: my-event
+        #     token: ${{ secrets.PAT1 }}
             
       # - name: Checkout repository
       #   uses: actions/checkout@v3
