--- a/.github/workflows/pytest_coverage.yml
+++ b/.github/workflows/pytest_coverage.yml
@@ -10,16 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        - name: Checkout repository
+        - name: Checkout
           uses: actions/checkout@v3
 
-        
-        - name: Repository Dispatch
-          uses: peter-evans/repository-dispatch@v3
-          with:
-            repository: DenzMoses/wf-dispatch
-            event-type: my-event
-            token: ${{ secrets.PAT1 }}
+        - name: Dummy1
+          run: echo "Running dummy step 1"
+          id: dummy-step-1
+
+        - name: Dummy2
+          run: echo "Running dummy step 2"
+          id: dummy-step-2
+
+        - name: Dummy3
+          run: echo "Running dummy step 3"
+          id: dummy-step-3        
+        # - name: Repository Dispatch
+        #   uses: peter-evans/repository-dispatch@v3
+        #   with:
+        #     repository: DenzMoses/wf-dispatch
+        #     event-type: my-event
+        #     token: ${{ secrets.PAT1 }}
 
         # - name: Repository Dispatch
         #   uses: peter-evans/repository-dispatch@v3
